--- a/State_feedback_on_double_integrator.ipynb
+++ b/State_feedback_on_double_integrator.ipynb
@@ -28,23 +28,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\farad59\\Desktop\\Works\\state_feedback\\Control_threory_blog\\Control_threory_blog\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'Control_threory_blog'...\n",
+      "Directory '.' is not installable. File 'setup.py' not found.\n",
+      "You are using pip version 10.0.1, however version 21.1.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
    "source": [
+    "!git clone https://github.com/FarnazAdib/Control_threory_blog\n",
+    "%cd Control_threory_blog\n",
+    "!pip install .\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import scipy.integrate as integrate\n",
     "from IPython.display import HTML\n",
-    "from fun_lib import plot_simple_car"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from fun_lib import plot_simple_car\n",
+    "\n",
     "def simple_car(par):\n",
     "    # Double Integrator Dynamics\n",
     "    A = np.array([[0.0, 1.0], [0.0, 0.0]])\n",
