--- a/State_feedback_on_simple_car.ipynb
+++ b/State_feedback_on_simple_car.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# State Feedback\n",
-    "In this notebook, we aim to learn the concept of state feedback. First, we visualaize this concept by working on a the model of a simple car. Then, we define sthe state feedback mathematically. Below we import some libraries and define the ploter:"
+    "In this notebook, we aim to learn the concept of state feedback. First, we visualaize this concept by working on a the model of a simple car. Then, we define the state feedback mathematically. Below we import some libraries and define the ploter:"
    ]
   },
   {
@@ -1236,7 +1236,7 @@
     }
    ],
    "source": [
-    "#@title Feedback controller parameters\n",
+    "#@title Feedback controller parameters { run: \"auto\" }\n",
     "#@markdown In x direction\n",
     "position_gain_x = 4.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "velocity_gain_x = 5.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
@@ -1980,7 +1980,7 @@
     }
    ],
    "source": [
-    "#@title A P controller: The D gain is set to zero\n",
+    "#@title A P controller: The D gain is set to zero { run: \"auto\" }\n",
     "#@markdown In x direction\n",
     "position_gain_x = 4.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "\n",
@@ -2427,7 +2427,7 @@
     }
    ],
    "source": [
-    "#@title A D controller: The P gain is set to zero\n",
+    "#@title A D controller: The P gain is set to zero { run: \"auto\" }\n",
     "#@markdown In x direction\n",
     "velocity_gain_x = 5.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "\n",
@@ -2485,7 +2485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets comeback and revisit our probelm. We suggested the following state feedback controller $K=\\begin{bmatrix}4.0,5.0\\end{bmatrix}$ for the simple car. Let's see the eigenvalues of $A-BK$ for the simple car"
+    "Lets comeback and revisit our probelm. We suggested to use a state feedback containing both the position and velocity gains for the simple car. Let's see the eigenvalues of $A-BK$ "
    ]
   },
   {
@@ -2511,7 +2511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that both eigenvalues are negative and as such the simple car dynamics is stable. Now let's see why two other choices of the controller gain do not work. We will undersand it by checking the eigenvalues. First the P case:\n"
+    "You can see that both eigenvalues are negative and as such the simple car dynamics is stable. Now let's see why two other choices of the controller gain do not work. We will undersand it by checking the eigenvalues. First the P case when we have the position gain only:\n"
    ]
   },
   {
@@ -2535,7 +2535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that the eigenvalues have zero real parts which result in an oscillatory behavior. Now, we check the D case:"
+    "You can see that the eigenvalues have zero real parts which result in an oscillatory behavior. Now, we check the D case, when we have the velocity gain only:"
    ]
   },
   {
