control over simulation parameters is added

--- a/State_feedback_on_simple_car.ipynb
+++ b/State_feedback_on_simple_car.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1230,13 +1230,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#@title Feedback controller parameters { run: \"auto\" }\n",
+    "#@A state Feedback controller { run: \"auto\" }\n",
+    "\n",
     "#@markdown In x direction\n",
     "position_gain_x = 4.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "velocity_gain_x = 5.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
@@ -1245,12 +1246,18 @@
     "position_gain_y = 4.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "velocity_gain_y = 5.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "\n",
+    "#@markdown Simulation related\n",
+    "initial_position_x = -3.0 #@param {type:\"slider\", min:-5.0, max:5.0, step:0.5}\n",
+    "initial_velocity_x = 1.0 #@param {type:\"slider\", min:-2.0, max:2.0, step:0.5}\n",
+    "initial_position_y = 2.0 #@param {type:\"slider\", min:-5.0, max:5.0, step:0.5}\n",
+    "initial_velocity_y = 1.0 #@param {type:\"slider\", min:-2.0, max:2.0, step:0.5}\n",
+    "simulation_time = 5.0 #@param {type:\"slider\", min:5.0, max:20, step:0.5}\n",
     "\n",
     "your_controller = {\n",
-    "    'init_state': np.array([-3.0, 1.0, 2.0, 1.0]),\n",
+    "    'init_state': np.array([initial_position_x, initial_velocity_x, initial_position_y, initial_velocity_y]),\n",
     "    'Kx': np.array([[position_gain_x, velocity_gain_x]]),\n",
     "    'Ky': np.array([[position_gain_y, velocity_gain_y]]),\n",
-    "    't_stop': 5,  # how many seconds to simulate\n",
+    "    't_stop': simulation_time,  # how many seconds to simulate\n",
     "    'dt': 0.02,\n",
     "    'title': 'A state feedback controller'\n",
     "}\n",
@@ -1270,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1981,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,12 +1994,19 @@
     "#@markdown In y direction\n",
     "position_gain_y = 4.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "\n",
+    "#@markdown Simulation related\n",
+    "initial_position_x = -3.0 #@param {type:\"slider\", min:-5.0, max:5.0, step:0.5}\n",
+    "initial_velocity_x = 1.0 #@param {type:\"slider\", min:-2.0, max:2.0, step:0.5}\n",
+    "initial_position_y = 2.0 #@param {type:\"slider\", min:-5.0, max:5.0, step:0.5}\n",
+    "initial_velocity_y = 1.0 #@param {type:\"slider\", min:-2.0, max:2.0, step:0.5}\n",
+    "simulation_time = 5.0 #@param {type:\"slider\", min:5.0, max:20, step:0.5}\n",
+    "\n",
     "\n",
     "P_controller = {\n",
-    "    'init_state': np.array([-3.0, 1.0, 2.0, 1.0]),\n",
+    "    'init_state': np.array([initial_position_x, initial_velocity_x, initial_position_y, initial_velocity_y]),\n",
     "    'Kx': np.array([[position_gain_x, 0.0]]),\n",
     "    'Ky': np.array([[position_gain_y, 0.0]]),\n",
-    "    't_stop': 5,  # how many seconds to simulate\n",
+    "    't_stop': simulation_time,  # how many seconds to simulate\n",
     "    'dt': 0.02,\n",
     "    'title': 'A proportional (P) controller'\n",
     "}\n",
@@ -2017,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2435,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2434,11 +2448,19 @@
     "#@markdown In y direction\n",
     "velocity_gain_y = 5.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
     "\n",
+    "#@markdown Simulation related\n",
+    "initial_position_x = -3.0 #@param {type:\"slider\", min:-5.0, max:5.0, step:0.5}\n",
+    "initial_velocity_x = 1.0 #@param {type:\"slider\", min:-2.0, max:2.0, step:0.5}\n",
+    "initial_position_y = 2.0 #@param {type:\"slider\", min:-5.0, max:5.0, step:0.5}\n",
+    "initial_velocity_y = 1.0 #@param {type:\"slider\", min:-2.0, max:2.0, step:0.5}\n",
+    "simulation_time = 5.0 #@param {type:\"slider\", min:5.0, max:20, step:0.5}\n",
+    "\n",
+    "\n",
     "D_controller = {\n",
-    "    'init_state': np.array([-3.0, 1.0, 2.0, 1.0]),\n",
+    "    'init_state': np.array([initial_position_x, initial_velocity_x, initial_position_y, initial_velocity_y]),\n",
     "    'Kx': np.array([[0, velocity_gain_x]]),\n",
     "    'Ky': np.array([[0, velocity_gain_y]]),\n",
-    "    't_stop': 5,  # how many seconds to simulate\n",
+    "    't_stop': simulation_time,  # how many seconds to simulate\n",
     "    'dt': 0.02,\n",
     "    'title': 'A derivative (D) controller'\n",
     "}\n",
@@ -2490,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2540,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
