--- a/State_feedback_on_simple_car.ipynb
+++ b/State_feedback_on_simple_car.ipynb
@@ -1236,7 +1236,7 @@
     }
    ],
    "source": [
-    "#@A state Feedback controller { run: \"auto\" }\n",
+    "#@title A state Feedback controller { run: \"auto\" }\n",
     "\n",
     "#@markdown In x direction\n",
     "position_gain_x = 4.0 #@param {type:\"slider\", min:1.0, max:10.0, step:0.5}\n",
